--- a/projecten.html
+++ b/projecten.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Architectenbureau [Naam]</title>
+    <title>Projecten - Architectenbureau [Naam]</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -16,22 +16,16 @@
         </nav>
     </header>
 
-    <section id="portfolio">
+    <main>
         <h2>Projecten</h2>
         <div class="gallery">
             <img src="images/project1.jpg" alt="Project 1">
             <img src="images/project2.jpg" alt="Project 2">
-            <!-- meer foto’s -->
         </div>
-    </section>
+    </main>
 
     <footer>
-        <p>Contact: <a href="mailto:anja@architectgielen.be">anja@architectgielen.be</a></p>
-        <p>
-            Volg ons op: 
-            <a href="https://www.facebook.com/architectgielen" target="_blank">Facebook</a> | 
-            <a href="https://instagram.com/architectanjagielen" target="_blank">Instagram</a>
-        </p>
+        <p>Contact: <a href="mailto:email@voorbeeld.be">email@voorbeeld.be</a></p>
     </footer>
 </body>
 </html>
