--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Architectenbureau [Naam]</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Architect Anja Gielen</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Architectenbureau [Naam]</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">Over ons</a>
-            <a href="projecten.html">Projecten</a>
-        </nav>
+        <div class="header-container">
+            <img src="Pictures/Logo.png" alt="Logo" class="logo">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">Over mij</a>
+                <a href="projecten.html">Projecten</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
     </header>
+
 
     <section id="portfolio">
         <h2>Projecten</h2>
