--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architect Anja Gielen</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -31,11 +32,12 @@
 
     <footer>
         <p>Contact: <a href="mailto:anja@architectgielen.be">anja@architectgielen.be</a></p>
-        <p>
-            Volg ons op: 
-            <a href="https://www.facebook.com/architectgielen" target="_blank">Facebook</a> | 
-            <a href="https://instagram.com/architectanjagielen" target="_blank">Instagram</a>
-        </p>
+        <a href="https://www.instagram.com/architectanjagielen" target="_blank">
+            <i class="fab fa-instagram fa-2x"></i>
+        </a>
+        <a href="https://www.facebook.com/architectgielen" target="_blank">
+            <i class="fab fa-facebook fa-2x"></i>
+        </a>
     </footer>
 </body>
 </html>
