--- a/projecten.html
+++ b/projecten.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projecten - Architectenbureau [Naam]</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -28,7 +29,13 @@
     </main>
 
     <footer>
-        <p>Contact: <a href="mailto:email@voorbeeld.be">email@voorbeeld.be</a></p>
+        <p>Contact: <a href="mailto:anja@architectgielen.be">anja@architectgielen.be</a></p>
+        <a href="https://www.instagram.com/architectanjagielen" target="_blank">
+            <i class="fab fa-instagram fa-2x"></i>
+        </a>
+        <a href="https://www.facebook.com/architectgielen" target="_blank">
+            <i class="fab fa-facebook fa-2x"></i>
+        </a>
     </footer>
 </body>
 </html>
