--- a/Contact.html
+++ b/Contact.html
@@ -22,16 +22,16 @@
 
     <main>
         <h1>Contact</h1>
-        <p>Neem gerust contact met ons op voor meer informatie of een afspraak.</p>
+        <p>Neem gerust contact met me op voor meer informatie of een afspraak.</p>
 
         <section class="contact-info">
-            <p><strong>Adres:</strong> Stationsstraat 123, 3500 Hasselt</p>
-            <p><strong>Telefoon:</strong> <a href="tel:+32123456789">+32 12 34 56 789</a></p>
-            <p><strong>Email:</strong> <a href="mailto:zeno.cominotto@gmail.com">zeno.cominotto@gmail.com</a></p>
+            <p><strong>Adres:</strong> De Scheuten 12, 3971 Heppen</p>
+            <p><strong>Telefoon:</strong> <a href="tel:+32 476 47 32 48">+32 476 47 32 48</a></p>
+            <p><strong>Email:</strong> <a href="mailto:anja@architectgielen.be">anja@architectgielen.be</a></p>
         </section>
 
         <section class="socials">
-            <h2>Volg ons</h2>
+            <h2>Volg mij op</h2>
             <a href="https://www.instagram.com/jouwaccount" target="_blank">
                 <i class="fab fa-instagram fa-2x"></i>
             </a>
@@ -41,7 +41,7 @@
         </section>
 
         <section class="contact-form">
-            <h2>Stuur ons een bericht</h2>
+            <h2>Stuur me een bericht</h2>
             <form id="contactForm">
                 <input type="text" name="name" placeholder="Naam" required>
                 <input type="email" name="email" placeholder="E-mail" required>
