--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     </header>
 
 
-    <section id="portfolio">
+    <main id="portfolio">
         <h2>Projecten</h2>
         <div class="gallery">
             <img src="images/project1.jpg" alt="Project 1">
             <img src="images/project2.jpg" alt="Project 2">
             <!-- meer foto’s -->
         </div>
-    </section>
+    </main>
 
     <footer>
         <p>Contact: <a href="mailto:anja@architectgielen.be">anja@architectgielen.be</a></p>
