auto pictures fix

--- a/projecten.html
+++ b/projecten.html
@@ -22,7 +22,7 @@
 
     <main>
         <h2>Projecten</h2>
-        <<div id="gallery"></div>
+        <div id="gallery"></div>
         <script>
         fetch("/.netlify/functions/getImages")
             .then(res => res.json())
